crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__escape_empty_string.snap
---
source: crates/shell/src/shells/bash.rs
assertion_line: 156
expression: "escapeBash(\"\")"
---

