crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__escape_plain_string.snap
---
source: crates/shell/src/shells/bash.rs
assertion_line: 126
expression: "escapeBash(\"foobar\")"
---
foobar
