crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__escape_string_with_backslashes.snap
---
source: crates/shell/src/shells/bash.rs
assertion_line: 150
expression: "escapeBash(\"a\\\\b\")"
---
$'a\\b'
