crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__escape_string_with_single_quotes.snap
---
source: crates/shell/src/shells/bash.rs
assertion_line: 138
expression: "escapeBash(\"don't\")"
---
$'don\'t'
