crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__escape_string_with_spaces.snap
---
source: crates/shell/src/shells/bash.rs
assertion_line: 132
expression: "escapeBash(\"foo bar\")"
---
$'foo bar'
