crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__escape_string_with_special_characters.snap
---
source: crates/shell/src/shells/bash.rs
assertion_line: 144
expression: "escapeBash(\"$100@*&\")"
---
$'$100\x40\x2A&'
