crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__formats_cd_hook-2.snap
---
source: crates/shell/src/shells/bash.rs
expression: "Bash.format_on_cd_hook(\"starbase\",\n        &[\"$PROTO_HOME/shims\".into(), \"$PROTO_HOME/bin\".into()],\n        &[(\"PROTO_HOME\".into(), Some(\"$HOME/.proto\".into())),\n                    (\"PROTO_ROOT\".into(), None)]).unwrap()"
---
_starbase_hook() {
  local previous_exit_status=$?;
  trap -- '' SIGINT;
  export PROTO_HOME="$HOME/.proto";
  unset PROTO_ROOT;
  export PATH="$PROTO_HOME/shims:$PROTO_HOME/bin:$PATH";
  trap - SIGINT;
  return $previous_exit_status;
};

if [[ ";${PROMPT_COMMAND[*]:-};" != *";_starbase_hook;"* ]]; then
  if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
    PROMPT_COMMAND=(_starbase_hook "${PROMPT_COMMAND[@]}")
  else
    PROMPT_COMMAND="_starbase_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
  fi
fi
