crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__formats_cd_hook.snap
---
source: crates/shell/src/shells/bash.rs
expression: Bash.format_hook(hook).unwrap()
---
_starbase_hook() {
  local previous_exit_status=$?;
  local output;
  trap '' SIGINT;
  output=$(starbase hook bash)
  if [ -n "$output" ]; then
    eval "$output";
  fi
  trap - SIGINT;
  return $previous_exit_status;
};

if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
  if [[ " ${PROMPT_COMMAND[*]:-} " != *" _starbase_hook "* ]]; then
    PROMPT_COMMAND=(_starbase_hook "${PROMPT_COMMAND[@]}")
  fi
elif [[ ";${PROMPT_COMMAND:-};" != *";_starbase_hook;"* ]]; then
  PROMPT_COMMAND="_starbase_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
fi
