crates/shell/src/shells/snapshots/starbase_shell__shells__bash__tests__formats_register_handlers_hook.snap
---
source: crates/shell/src/shells/bash.rs
expression: "Bash.format_hook(Hook::RegisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
if [[ "$(declare -p PROMPT_COMMAND 2>&1)" == "declare -a"* ]]; then
  if [[ " ${PROMPT_COMMAND[*]:-} " != *" _starbase_hook "* ]]; then
    PROMPT_COMMAND=(_starbase_hook "${PROMPT_COMMAND[@]}")
  fi
elif [[ ";${PROMPT_COMMAND:-};" != *";_starbase_hook;"* ]]; then
  PROMPT_COMMAND="_starbase_hook${PROMPT_COMMAND:+;$PROMPT_COMMAND}"
fi
